--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,14 +3,23 @@ h1 {
     background: @gold;
     padding: 1rem 0;
     text-align: center;
+    //margin-bottom: .2rem;
 }
 
-img {
-    @media(max-width:800px) {
-        display: none;
-    }
-}
 
+
+header {
+  margin: 0 auto;
+  .flex(center, middle, column);
+  background: @darkBlue;
+  
+    img {
+      @media(max-width:800px) {
+          display: none;
+      }
+      margin: 0 auto;
+  }
+}
 
 
   .tabs {
@@ -18,10 +27,11 @@ img {
     .flex(center, center);
     width: 100%;
     height: 47px;
-    background-color: @blue;
-    @media(min-width: 1280px){
-      width: 800px;
-    }
+    background-color: #0f3d54;
+    margin: 0 auto;
+    // @media(min-width: 1280px){
+    //   width: 800px;
+    // }
     .topics {
       .flex(none, center);
       .title {
@@ -54,17 +64,16 @@ img {
   .cards-container {
     .flex(space-evenly);
     width: 100%;
-    margin-top: 16px;
+    //margin-top: 16px;
     flex-wrap: wrap;
-    @media(min-width: 1200px){
-      width: 800px;
-    }
+    background: @blue;
     .card {
       border-bottom: grey;
       .flex(space-between, none, column);
       display: none;
       background-color: @blue;
       width: 100%;
+      width: 752px;
       margin-bottom: 16px;
       padding: 24px;
       color: @white;
