--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,16 +9,29 @@
         padding: .5rem 0;
         margin: 0 0 .2rem 0;
         width: 100%;
+        
         a {
             text-decoration: none;
             color: @white;
+            background: @blue;
+            padding: .6rem 1rem;
+            border-radius: 3rem;
         }
+
+        .signUp {
+            background: @white;
+            color: black;
+            padding: .6rem 1rem;
+            border-radius: 3rem;
+            
+        }
+
         #about {
-            width: 35%;
+            margin-right: 10rem;
         }
-        @media(max-width:500px) {
+        @media(max-width:650px) {
             #about {
-                width: 15rem;
+                margin-right: 2.5rem;
             }
         }
     }
