--- a/less/home-page.less
+++ b/less/home-page.less
@@ -27,7 +27,7 @@ header {
     .flex(center, center);
     width: 100%;
     height: 47px;
-    background-color: #0f3d54;
+    background-color: @darkBlue;
     margin: 0 auto;
     // @media(min-width: 1280px){
     //   width: 800px;
@@ -66,7 +66,7 @@ header {
     width: 100%;
     //margin-top: 16px;
     flex-wrap: wrap;
-    background: @blue;
+    background: @gold;
     .card {
       border-bottom: grey;
       .flex(space-between, none, column);
@@ -74,7 +74,6 @@ header {
       background-color: @blue;
       width: 100%;
       width: 752px;
-      margin-bottom: 16px;
       padding: 24px;
       color: @white;
       .headline {
