--- a/less/home-page.less
+++ b/less/home-page.less
@@ -103,3 +103,49 @@ header {
         display: flex;
     }
   }
+
+  .iconsContainer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: @white;
+    
+    .icons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      background: @blue;
+      width: 800px;
+
+      @media(max-width: 800px) {
+        width: 100%;
+      }
+
+      .box {
+        width: 390px;
+        display: flex;
+
+        img {
+          width: 150px;
+          height: 150px;
+        }
+
+        p {
+          margin-top: 1.8rem;
+          margin-left: 1.6rem;
+        }
+      }
+
+      .bottomBox {
+        margin-top: 3.5rem;
+        margin-bottom: 3.5rem;
+
+        @media(max-width: 800px) {
+          margin: 0;
+        }
+      }
+
+     
+    }
+  }
