--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,6 +2,7 @@
     background: #0f3d54;
     display: flex;
     justify-content: center;
+    margin-bottom: .5rem;
     nav {
         max-width: 800px;
         color: @white;
@@ -35,4 +36,9 @@
             }
         }
     }
+    
+}
+
+.bottomNav {
+    border-top: .5rem solid white;
 }
