--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,10 +1,4 @@
-h1 {
-    font-size: 2rem;
-    background: @gold;
-    padding: 1rem 0;
-    text-align: center;
-    //margin-bottom: .2rem;
-}
+
 
 
 
@@ -12,6 +6,14 @@ header {
   margin: 0 auto;
   .flex(center, middle, column);
   background: @darkBlue;
+
+  h1 {
+    font-size: 2rem;
+    background: @gold;
+    padding: 1rem 0;
+    text-align: center;
+    border-bottom: .5rem solid white;
+}
   
     img {
       @media(max-width:800px) {
@@ -29,6 +31,7 @@ header {
     height: 47px;
     background-color: @darkBlue;
     margin: 0 auto;
+    margin-bottom: .5rem;
     // @media(min-width: 1280px){
     //   width: 800px;
     // }
@@ -76,6 +79,7 @@ header {
       width: 752px;
       padding: 24px;
       color: @white;
+      margin-bottom: 100px solid white;
       .headline {
         font-size: 25px;
         font-family: Didot, serif;
@@ -105,13 +109,16 @@ header {
   }
 
   .iconsContainer {
+    
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: @white;
+    background: @gold;
     
     .icons {
+      border-top: .5rem solid white;
+      // border-bottom: .5rem solid white;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
