--- a/less/about-page.less
+++ b/less/about-page.less
@@ -34,7 +34,7 @@
                 margin-right: 5rem;
                 margin-left: 2rem;
                 height: 7.6rem;
-                color: white;
+                color: @white;
                 padding-bottom: 1rem;
     
                 @media(max-width: 650px) {
@@ -47,7 +47,7 @@
             }
     
             .textContent {
-                color: white;
+                color: @white;
                 margin-right: 1.5rem;
             }
     
