--- a/less/home-page.less
+++ b/less/home-page.less
@@ -142,13 +142,15 @@ header {
         display: flex;
 
         img {
-          width: 150px;
-          height: 150px;
+          width: 35%;
+          height: 180px;
         }
 
         p {
+          width: 62%;
           margin-top: 1.8rem;
           margin-left: 1.6rem;
+          color: @white;
         }
       }
 
