--- a/less/about-page.less
+++ b/less/about-page.less
@@ -44,6 +44,15 @@
                 img {
                     width: 100px;
                 }
+                
+                span {
+                    text-align:center;
+                }
+
+                p {
+                    text-align: center;
+                    margin-top: .5rem
+                }
             }
     
             .textContent {
