--- a/less/about-page.less
+++ b/less/about-page.less
@@ -33,7 +33,7 @@
                 align-items: center;
                 margin-right: 5rem;
                 margin-left: 2rem;
-                height: 7.6rem;
+                // height: 7.6rem;
                 color: @white;
                 padding-bottom: 1rem;
     
@@ -47,6 +47,7 @@
                 
                 span {
                     text-align:center;
+                    padding-top: .5rem;
                 }
 
                 p {
