--- a/less/navigation.less
+++ b/less/navigation.less
@@ -20,7 +20,7 @@
         }
 
         .signUp {
-            background: @white;
+            background: white;
             color: black;
             padding: .6rem 1rem;
             border-radius: 3rem;
@@ -41,4 +41,5 @@
 
 .bottomNav {
     border-top: .5rem solid white;
+    margin-bottom: 0;
 }
