--- a/less/about-page.less
+++ b/less/about-page.less
@@ -1,8 +1,3 @@
-.spacer {
-    // padding-top: 4rem;
-    // background: @blue;
-}
-
 .devsContainer {
     display: flex;
     align-items: center;
@@ -24,7 +19,7 @@
             justify-content: flex-left;
             width: 100%;
             background: @blue;
-            padding-bottom: 1rem;
+            padding-bottom: .5rem;
     
             .namePhoto {
                 display: flex;
@@ -52,13 +47,19 @@
 
                 p {
                     text-align: center;
-                    margin-top: .5rem
+                    margin-top: .5rem;
+                    width: 100px;
                 }
             }
     
             .textContent {
                 color: @white;
                 margin-right: 1.5rem;
+
+                p {
+                    margin-top: 1.2rem;
+                }
+
             }
     
         }
