--- a/less/home-page.less
+++ b/less/home-page.less
@@ -22,7 +22,7 @@ header {
           display: none;
       }
       margin: 0 auto;
-      margin-top: 1rem;
+      margin-top: 1.5rem;
   }
 }
 
@@ -34,8 +34,8 @@ header {
     height: 47px;
     background-color: @darkBlue;
     margin: 0 auto;
-    border-bottom: .3rem solid @darkBlue;
-    border-top: .3rem solid @darkBlue;
+    border-bottom: .8rem solid @darkBlue;
+    border-top: .8rem solid @darkBlue;
     // @media(min-width: 1280px){
     //   width: 800px;
     // }
@@ -91,7 +91,7 @@ header {
         font-size: 25px;
         font-family: Didot, serif;
       }
-      .author {
+      .content {
         .flex(none, center);
         margin-top: 15px;
         .img-container {
@@ -124,7 +124,7 @@ header {
     background: @darkBlue;
     
     .icons {
-      border-top: .5rem solid @darkBlue;
+      border-top: 1.7rem solid @darkBlue;
       border-bottom: 3rem solid @darkBlue;
       // border-bottom: .5rem solid white;
       display: flex;
@@ -165,4 +165,13 @@ header {
 
      
     }
+  }
+
+  .iconsHeader {
+    text-align: center;
+    background: @darkBlue;
+    border-top: 1.5rem solid @darkBlue;
+    color: @white;
+    font-size: 2rem;
+    padding-bottom: .7rem;
   }
