last minute changes

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,7 @@
 
 body {
   background: white;
+  font-size: 1.2rem;
 }
 
 header {
@@ -69,7 +70,6 @@ header {
   .cards-container {
     .flex(space-evenly);
     width: 100%;
-    //margin-top: 16px;
     flex-wrap: wrap;
     background: @darkBlue;
     .card {
@@ -111,7 +111,6 @@ header {
   }
 
   .iconsContainer {
-    
     width: 100%;
     display: flex;
     align-items: center;
@@ -127,11 +126,9 @@ header {
       justify-content: space-around;
       background: @blue;
       width: 800px;
-
       @media(max-width: 800px) {
         width: 100%;
       }
-
       .box {
         width: 390px;
         display: flex;
@@ -140,7 +137,6 @@ header {
           width: 35%;
           height: 180px;
         }
-
         p {
           width: 62%;
           margin-top: 1.8rem;
@@ -148,17 +144,13 @@ header {
           color: @white;
         }
       }
-
       .bottomBox {
         margin-top: 3.5rem;
         margin-bottom: 3.5rem;
-
         @media(max-width: 800px) {
           margin: 0;
         }
       }
-
-     
     }
   }
 
